Add store and retrieve current logged in user

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'beepos' do
 
   pod 'RNLocalize', :path => '../node_modules/react-native-localize'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'beeposTests' do
     inherit! :complete
     # Pods for testing
